# authify

./: LICENSE  README.md  __init__.py  main.py  pyproject.toml  requirements.txt
core/: __init__.py  crypto.py  hotp.py  totp.py  utils.py
qr/: __init__.py  parser.py  scanner.py
storage/: __init__.py  database.py  encryption.py
tests/: __init__.py  test_crypto.py  test_database.py  test_otp.py  test_parser.py
ui/: __init__.py  add_account.py  main_window.py  qr_scan_dialog.py  styles.py  unlock_dialog.py
