[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "authify"
version = "1.0.0"
description = "Secure, offline, privacy-first TOTP/HOTP authenticator"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["totp", "hotp", "2fa", "otp", "authenticator", "security"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "cryptography>=42.0.0",
    "PyQt6>=6.6.0",
]

[project.optional-dependencies]
qr = [
    "opencv-python>=4.9.0",
    "pyzbar>=0.1.9",
]
dev = [
    "pytest>=8.0.0",
    "pytest-qt>=4.3.0",
    "coverage>=7.4.0",
    "ruff>=0.3.0",
]

[project.scripts]
authify = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "qr*", "storage*", "ui*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]
